# libdde-auth

./: CMakeLists.txt
dbus/: CMakeLists.txt  com.deepin.daemon.Authority.cpp  com.deepin.daemon.Authority.h  com.deepin.daemon.authority.Transaction.cpp  com.deepin.daemon.authority.Transaction.h  transaction.xml
interface/: CMakeLists.txt  deepinauthframework.h  deepinauthinterface.h
src/: CMakeLists.txt  authagent.cpp  authagent.h  authdbusadapter.h  deepinauthframework.cpp  deepinauthframework.h
